# junior

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  junior.sln  junior.vcxproj  junior.vcxproj.filters
example/drawing/: drawing.cpp
example/multi-window/: multi-window.cpp
example/simple/: simple.cpp
examples/: CMakeLists.txt
examples/drawing/: drawing.cpp
examples/multi-window/: multi-window.cpp
examples/simple/: simple.cpp
inc/: event.h  junior  window.h
include/: event.h  junior-simple.h  junior.h  window.h
src/: CMakeLists.txt  event.cpp  junior-simple.cpp  main.cpp  window.cpp
src/core/: event.cpp  junior-simple.cpp  window.cpp
src/win32/: common-winsdk.h  event_engine.cpp  event_engine.h  window_engine.cpp  window_engine.h
